--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <a href="#">
         <!-- AKADEMNASHR LOGO RASMI -->
     </a>
-
-    <a href="#">Bosh sahifa</a>
-    <a href="#">Kitoblar</a>
-    <a href="#">Aksiyalar</a>
-    <a href="#">Kontaktlar</a>
+    <ul>
+        <li><a href="#">Bosh sahifa</a></li>
+        <li><a href="#">Kitoblar</a></li>
+        <li><a href="#">Aksiyalar</a></li>
+        <li><a href="#">Kontaktlar</a></li>
+    </ul>
 
     <a href="#">Ro’yxatdan o’tish</a>
     <hr>
@@ -33,17 +34,23 @@
     <hr>
     <h2>Nega aynan Akademnashr?</h2>
 
-    <!-- FEATURE RASMI -->
-    <h3>Oson buyurtma qilish</h3>
-    <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
-
-    <!-- FEATURE RASMI -->
-    <h3>Eng sara kitoblar</h3>
-    <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
-
-    <!-- FEATURE RASMI -->
-    <h3>Tez yetkazib berish</h3>
-    <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+    <ul>
+        <li>
+            <!-- FEATURE RASMI -->
+            <h3>Oson buyurtma qilish</h3>
+            <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+        </li>
+        <li>
+            <!-- FEATURE RASMI -->
+            <h3>Eng sara kitoblar</h3>
+            <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+        </li>
+        <li>
+            <!-- FEATURE RASMI -->
+            <h3>Tez yetkazib berish</h3>
+            <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+        </li>
+    </ul>
 
 
     <!-- AKSIYA -->
@@ -62,34 +69,89 @@
     </a>
 
     <!-- IJTIMOI TARMOQLAR -->
-    <a href="https://t.me/akademnashr_uz" target="_blank">Akademnashr Telegram Kanali (logosi)</a>
-    <a href="https://ru-ru.facebook.com/Akademnashr/" target="_blank">Akademnashr Facebook (logosi)</a>
-    <a href="https://www.instagram.com/akademnashr/">Akademnashr istagram sahifasi (logosi)</a>
+    <ul>
+        <li>
+            <a href="https://t.me/akademnashr_uz" target="_blank">Akademnashr Telegram Kanali (logosi)</a>
+        </li>
+        <li>
+            <a href="https://ru-ru.facebook.com/Akademnashr/" target="_blank">Akademnashr Facebook (logosi)</a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/akademnashr/">Akademnashr istagram sahifasi (logosi)</a>
+        </li>
+    </ul>
 
     <hr>
 
     <!-- LINKLAR -->
-    <a href="#">Bosh sahifa</a>
-    <a href="#">Kitoblar</a>
-    <a href="#">Aksiyalar</a>
-    <a href="#">Yangiliklar</a>
-    <a href="#">Kontaktlar</a>
+    <ul>
+        <li>
+            <a href="#">Bosh sahifa</a>
+        </li>
+        <li>
+            <a href="#">Kitoblar</a>
+        </li>
+        <li>
+            <a href="#">Aksiyalar</a>
+        </li>
+        <li>
+            <a href="#">Yangiliklar</a>
+        </li>
+        <li>
+            <a href="#">Kontaktlar</a>
+        </li>
+    </ul>
 
-    <a href="#">Ilmiy nashrlar</a>
-    <a href="#">Ilmiy nashrlar</a>
-    <a href="#">Ilmiy-ommabop nashrlar</a>
-    <a href="#">Ma’rifiy nashrlar</a>
-    <a href="#">Lug’atlar</a>
-    <a href="#">Adabiy-badiiy nashrlar</a>
-    <a href="#">Abituriyentlar uchun</a>
-    <a href="#">Bolalar uchun</a>
+    <ul>
+        <li>
+            <a href="#">Ilmiy nashrlar</a>
+        </li>
+        <li>
+            <a href="#">Ilmiy nashrlar</a>
+        </li>
+        <li>
+            <a href="#">Ilmiy-ommabop nashrlar</a>
+        </li>
+        <li>
+            <a href="#">Ma’rifiy nashrlar</a>
+        </li>
+        <li>
+            <a href="#">Lug’atlar</a>
+        </li>
+        <li>
+            <a href="#">Adabiy-badiiy nashrlar</a>
+        </li>
+        <li>
+            <a href="#">Abituriyentlar uchun</a>
+        </li>
+        <li>
+            <a href="#">Bolalar uchun</a>
+        </li>
+    </ul>
 
-    <a href="#">Ko’p so’raladigan savollar</a>
-    <a href="#">Yetkazib berish haqida</a>
-    <a href="#">To’lov usullari haqida</a>
+    <ul>
+        <li>
+            <a href="#">Ko’p so’raladigan savollar</a>
+        </li>
+        <li>
+            <a href="#">Yetkazib berish haqida</a>
+        </li>
+        <li>
+            <a href="#">To’lov usullari haqida</a>
+        </li>
+    </ul>
 
-    <a href="#">Bo’sh ish o’rinlari</a>
-    <a href="#">Biz bilan bog’lanish</a>
-    <a href="#">Maxfiylik nizomi</a>
+    <ul>
+        <li>
+            <a href="#">Bo’sh ish o’rinlari</a>
+        </li>
+        <li>
+            <a href="#">Biz bilan bog’lanish</a>
+        </li>
+        <li>
+            <a href="#">Maxfiylik nizomi</a>
+        </li>
+    </ul>
+
 </body>
 </html>
