--- a/index.html
+++ b/index.html
@@ -9,149 +9,162 @@
 <body>
 
     <!-- SITE HEADER -->
-    <a href="#">
-        <!-- AKADEMNASHR LOGO RASMI -->
-    </a>
-    <ul>
-        <li><a href="#">Bosh sahifa</a></li>
-        <li><a href="#">Kitoblar</a></li>
-        <li><a href="#">Aksiyalar</a></li>
-        <li><a href="#">Kontaktlar</a></li>
-    </ul>
-
-    <a href="#">Ro’yxatdan o’tish</a>
-    <hr>
+    <div>
+        <a href="#">
+            <!-- AKADEMNASHR LOGO RASMI -->
+        </a>
+        <ul>
+            <li><a href="#">Bosh sahifa</a></li>
+            <li><a href="#">Kitoblar</a></li>
+            <li><a href="#">Aksiyalar</a></li>
+            <li><a href="#">Kontaktlar</a></li>
+        </ul>
+        <a href="#">Ro’yxatdan o’tish</a>
+    </div>
 
     <!-- HERO -->
-    <h1>Pythonda dasturlash<br>asoslari</h1>
-    <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-    <a href="#">Buyurtma berish</a>
+    <div>
+        <div>
+            <hr>
+            <h1>Pythonda dasturlash<br>asoslari</h1>
+            <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+            <a href="#">Buyurtma berish</a>
+        </div>
 
-    <!-- PYTON BOYICHA KITOB RASMI -->
+
+        <!-- PYTON BOYICHA KITOB RASMI -->
+    </div>
 
 
-    <!-- FEATURES -->
-    <hr>
-    <h2>Nega aynan Akademnashr?</h2>
 
-    <ul>
-        <li>
-            <!-- FEATURE RASMI -->
-            <h3>Oson buyurtma qilish</h3>
-            <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
-        </li>
-        <li>
-            <!-- FEATURE RASMI -->
-            <h3>Eng sara kitoblar</h3>
-            <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
-        </li>
-        <li>
-            <!-- FEATURE RASMI -->
-            <h3>Tez yetkazib berish</h3>
-            <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
-        </li>
-    </ul>
+    <div>
+        <!-- FEATURES -->
+        <hr>
+        <h2>Nega aynan Akademnashr?</h2>
+        <ul>
+            <li>
+                <!-- FEATURE RASMI -->
+                <h3>Oson buyurtma qilish</h3>
+                <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+            </li>
+            <li>
+                <!-- FEATURE RASMI -->
+                <h3>Eng sara kitoblar</h3>
+                <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+            </li>
+            <li>
+                <!-- FEATURE RASMI -->
+                <h3>Tez yetkazib berish</h3>
+                <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+            </li>
+        </ul>
+    </div>
 
 
     <!-- AKSIYA -->
-    <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-    <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-    <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-    <a href="#">Buyurtma berish</a>
+    <div>
+        <div>
+            <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+            <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+            <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+        </div>
+
+        <a href="#">Buyurtma berish</a>
+    </div>
 
 
     <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI -->
 
 
     <!-- SITE FOOTER -->
-    <a href="#">
-        <!-- AKADEMNASHR LOGO RASMI -->
-    </a>
-
-    <!-- IJTIMOI TARMOQLAR -->
-    <ul>
-        <li>
-            <a href="https://t.me/akademnashr_uz" target="_blank">Akademnashr Telegram Kanali (logosi)</a>
-        </li>
-        <li>
-            <a href="https://ru-ru.facebook.com/Akademnashr/" target="_blank">Akademnashr Facebook (logosi)</a>
-        </li>
-        <li>
-            <a href="https://www.instagram.com/akademnashr/">Akademnashr istagram sahifasi (logosi)</a>
-        </li>
-    </ul>
-
-    <hr>
-
-    <!-- LINKLAR -->
-    <ul>
-        <li>
-            <a href="#">Bosh sahifa</a>
-        </li>
-        <li>
-            <a href="#">Kitoblar</a>
-        </li>
-        <li>
-            <a href="#">Aksiyalar</a>
-        </li>
-        <li>
-            <a href="#">Yangiliklar</a>
-        </li>
-        <li>
-            <a href="#">Kontaktlar</a>
-        </li>
-    </ul>
-
-    <ul>
-        <li>
-            <a href="#">Ilmiy nashrlar</a>
-        </li>
-        <li>
-            <a href="#">Ilmiy nashrlar</a>
-        </li>
-        <li>
-            <a href="#">Ilmiy-ommabop nashrlar</a>
-        </li>
-        <li>
-            <a href="#">Ma’rifiy nashrlar</a>
-        </li>
-        <li>
-            <a href="#">Lug’atlar</a>
-        </li>
-        <li>
-            <a href="#">Adabiy-badiiy nashrlar</a>
-        </li>
-        <li>
-            <a href="#">Abituriyentlar uchun</a>
-        </li>
-        <li>
-            <a href="#">Bolalar uchun</a>
-        </li>
-    </ul>
-
-    <ul>
-        <li>
-            <a href="#">Ko’p so’raladigan savollar</a>
-        </li>
-        <li>
-            <a href="#">Yetkazib berish haqida</a>
-        </li>
-        <li>
-            <a href="#">To’lov usullari haqida</a>
-        </li>
-    </ul>
-
-    <ul>
-        <li>
-            <a href="#">Bo’sh ish o’rinlari</a>
-        </li>
-        <li>
-            <a href="#">Biz bilan bog’lanish</a>
-        </li>
-        <li>
-            <a href="#">Maxfiylik nizomi</a>
-        </li>
-    </ul>
+    <div>
+        <div>
+            <a href="#">
+                <!-- AKADEMNASHR LOGO RASMI -->
+            </a>
+            <!-- IJTIMOI TARMOQLAR -->
+            <ul>
+                <li>
+                    <a href="https://t.me/akademnashr_uz" target="_blank">Akademnashr Telegram Kanali (logosi)</a>
+                </li>
+                <li>
+                    <a href="https://ru-ru.facebook.com/Akademnashr/" target="_blank">Akademnashr Facebook (logosi)</a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/akademnashr/">Akademnashr istagram sahifasi (logosi)</a>
+                </li>
+            </ul>
+        </div>
+        <hr>
+        <!-- LINKLAR -->
+        <div>
+            <ul>
+                <li>
+                    <a href="#">Bosh sahifa</a>
+                </li>
+                <li>
+                    <a href="#">Kitoblar</a>
+                </li>
+                <li>
+                    <a href="#">Aksiyalar</a>
+                </li>
+                <li>
+                    <a href="#">Yangiliklar</a>
+                </li>
+                <li>
+                    <a href="#">Kontaktlar</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Ilmiy nashrlar</a>
+                </li>
+                <li>
+                    <a href="#">Ilmiy nashrlar</a>
+                </li>
+                <li>
+                    <a href="#">Ilmiy-ommabop nashrlar</a>
+                </li>
+                <li>
+                    <a href="#">Ma’rifiy nashrlar</a>
+                </li>
+                <li>
+                    <a href="#">Lug’atlar</a>
+                </li>
+                <li>
+                    <a href="#">Adabiy-badiiy nashrlar</a>
+                </li>
+                <li>
+                    <a href="#">Abituriyentlar uchun</a>
+                </li>
+                <li>
+                    <a href="#">Bolalar uchun</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Ko’p so’raladigan savollar</a>
+                </li>
+                <li>
+                    <a href="#">Yetkazib berish haqida</a>
+                </li>
+                <li>
+                    <a href="#">To’lov usullari haqida</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Bo’sh ish o’rinlari</a>
+                </li>
+                <li>
+                    <a href="#">Biz bilan bog’lanish</a>
+                </li>
+                <li>
+                    <a href="#">Maxfiylik nizomi</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
 </body>
 </html>
