Add header, main, footer, and nav tags

--- a/index.html
+++ b/index.html
@@ -9,75 +9,72 @@
 <body>
 
     <!-- SITE HEADER -->
-    <div>
+    <header>
         <a href="#">
             <!-- AKADEMNASHR LOGO RASMI -->
         </a>
-        <ul>
-            <li><a href="#">Bosh sahifa</a></li>
-            <li><a href="#">Kitoblar</a></li>
-            <li><a href="#">Aksiyalar</a></li>
-            <li><a href="#">Kontaktlar</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#">Bosh sahifa</a></li>
+                <li><a href="#">Kitoblar</a></li>
+                <li><a href="#">Aksiyalar</a></li>
+                <li><a href="#">Kontaktlar</a></li>
+            </ul>
+        </nav>
         <a href="#">Ro’yxatdan o’tish</a>
-    </div>
+    </header>
 
-    <!-- HERO -->
-    <div>
-        <div>
+    <main>
+        <!-- HERO -->
+        <section>
+            <div>
+                <hr>
+                <h1>Pythonda dasturlash<br>asoslari</h1>
+                <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+                <a href="#">Buyurtma berish</a>
+            </div>
+            <!-- PYTON BOYICHA KITOB RASMI -->
+        </section>
+        <section>
+            <!-- FEATURES -->
             <hr>
-            <h1>Pythonda dasturlash<br>asoslari</h1>
-            <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-            <a href="#">Buyurtma berish</a>
-        </div>
-
-
-        <!-- PYTON BOYICHA KITOB RASMI -->
-    </div>
-
-
-
-    <div>
-        <!-- FEATURES -->
-        <hr>
-        <h2>Nega aynan Akademnashr?</h2>
-        <ul>
-            <li>
-                <!-- FEATURE RASMI -->
-                <h3>Oson buyurtma qilish</h3>
-                <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
-            </li>
-            <li>
-                <!-- FEATURE RASMI -->
-                <h3>Eng sara kitoblar</h3>
-                <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
-            </li>
-            <li>
-                <!-- FEATURE RASMI -->
-                <h3>Tez yetkazib berish</h3>
-                <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
-            </li>
-        </ul>
-    </div>
-
-
-    <!-- AKSIYA -->
-    <div>
-        <div>
-            <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-            <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-            <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-        </div>
-
-        <a href="#">Buyurtma berish</a>
-    </div>
-
-
-    <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI -->
+            <h2>Nega aynan Akademnashr?</h2>
+            <ul>
+                <li>
+                    <!-- FEATURE RASMI -->
+                    <h3>Oson buyurtma qilish</h3>
+                    <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+                </li>
+                <li>
+                    <!-- FEATURE RASMI -->
+                    <h3>Eng sara kitoblar</h3>
+                    <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+                </li>
+                <li>
+                    <!-- FEATURE RASMI -->
+                    <h3>Tez yetkazib berish</h3>
+                    <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- AKSIYA -->
+        <section>
+            <div>
+                <div>
+                    <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
+                    <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+                    <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+                </div>
+                <a href="#">Buyurtma berish</a>
+            </div>
+            <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI -->
+        </section>
+    </main>
 
 
     <!-- SITE FOOTER -->
-    <div>
+
+    <footer>
         <div>
             <a href="#">
                 <!-- AKADEMNASHR LOGO RASMI -->
@@ -164,7 +161,8 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </footer>
+
 
 </body>
 </html>
