--- a/index.html
+++ b/index.html
@@ -5,79 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akademiknashir</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <!-- SITE HEADER -->
-    <header>
+    <header class="site-header">
         <a href="#">
             <!-- AKADEMNASHR LOGO RASMI -->
             <img src="img/AkademnashrLogo.svg" alt="Akademiknashir logosi" width="227" height="60">
         </a>
         <nav>
-            <ul>
-                <li><a href="#">Bosh sahifa</a></li>
-                <li><a href="#">Kitoblar</a></li>
-                <li><a href="#">Aksiyalar</a></li>
-                <li><a href="#">Kontaktlar</a></li>
+            <ul class="sitenav-list">
+                <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+                <li><a class="sitenav-link" href="#">Kitoblar</a></li>
+                <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
+                <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
             </ul>
         </nav>
-        <a href="#">Ro’yxatdan o’tish</a>
+        <a class="main-link" href="#">Ro’yxatdan o’tish</a>
     </header>
 
     <main>
         <!-- HERO -->
-        <section>
-            <div>
-                <hr>
-                <h1>Pythonda dasturlash<br>asoslari</h1>
-                <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-                <a href="#">Buyurtma berish</a>
+        <section class="hero">
+            <div class="hero-content">
+                <hr class="orange-line">
+                <h1 class="hero-heading">Pythonda dasturlash<br>asoslari</h1>
+                <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+                <a class="main-link" href="#">Buyurtma berish</a>
             </div>
             <!-- PYTON BOYICHA KITOB RASMI -->
-            <img src="img/python-book.jpg" alt="Qolda ushlab turilgan Pythonda dasturlash asoslari kitobi" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
+            <img class="hero-img" src="img/python-book.jpg" alt="Qolda ushlab turilgan Pythonda dasturlash asoslari kitobi" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
         </section>
-        <section>
-            <!-- FEATURES -->
-            <hr>
-            <h2>Nega aynan Akademnashr?</h2>
-            <ul>
-                <li>
-                    <img src="img/icon-cursor-click.svg" alt="" width="56" height="56">
-                    <h3>Oson buyurtma qilish</h3>
-                    <p>Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+        <!-- FEATURES -->
+        <section class="features">
+            <hr class="orange-line">
+            <h2 class="features-heading">Nega aynan Akademnashr?</h2>
+            <ul class="list">
+                <li class="feature">
+                    <div class="feature-icon-wrapper">
+                        <img src="img/icon-cursor-click.svg" alt="" width="56" height="56">
+                    </div>
+                    <h3 class="feature-title">Oson buyurtma qilish</h3>
+                    <p class="feature-info">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
                 </li>
-                <li>
-                    <img src="img/icon-sparkles.svg" alt="" width="56" height="56">
-                    <h3>Eng sara kitoblar</h3>
-                    <p>Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+                <li class="feature">
+                    <div class="feature-icon-wrapper">
+                        <img src="img/icon-sparkles.svg" alt="" width="56" height="56">
+                    </div>
+                    <h3 class="feature-title">Eng sara kitoblar</h3>
+                    <p class="feature-info">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
                 </li>
-                <li>
-                    <img src="img/icon-lighting-bolt.svg" alt="" width="56" height="56">
-                    <h3>Tez yetkazib berish</h3>
-                    <p>O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+                <li class="feature">
+                    <div class="feature-icon-wrapper">
+                        <img src="img/icon-lighting-bolt.svg" alt="" width="56" height="56">
+                    </div>
+                    <h3 class="feature-title">Tez yetkazib berish</h3>
+                    <p class="feature-info">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
                 </li>
             </ul>
         </section>
         <!-- AKSIYA -->
-        <section>
-            <div>
-                <div>
-                    <h2>Bolalar kitoblari uchun ajoyib aksiya!</h2>
-                    <p>Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-                    <p>Aksiyadagi eng katta to’plamda <strong>50 ta kitob</strong>ni <strong>350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
-                </div>
-                <a href="#">Buyurtma berish</a>
+        <section class="promo">
+            <div class="promo-content">
+                <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
+                <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+                <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highligh">50 ta kitob</strong>ni <strong class="promo-highligh">350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+                <a class="main-link" href="#">Buyurtma berish</a>
             </div>
             <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI -->
-            <img src="img/sale-img.jpg" alt="Kitoblar toplami usma-ust joylangan" srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
+            <img class="promo-img" src="img/sale-img.jpg" alt="Kitoblar toplami usma-ust joylangan" srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x">
         </section>
     </main>
 
 
     <!-- SITE FOOTER -->
 
-    <footer>
+    <footer class="site-footer">
         <div>
             <a href="#">
                 <!-- AKADEMNASHR LOGO RASMI -->
@@ -102,27 +107,27 @@
                 </li>
             </ul>
         </div>
-        <hr>
+        <hr class="site-footer-divider">
         <!-- LINKLAR -->
-        <div>
-            <ul>
-                <li>
+        <div class="footer">
+            <ul class="site-footer-links">
+                <li class="footer-item">
                     <a href="#">Bosh sahifa</a>
                 </li>
-                <li>
+                <li class="footer-item">
                     <a href="#">Kitoblar</a>
                 </li>
-                <li>
+                <li class="footer-item">
                     <a href="#">Aksiyalar</a>
                 </li>
-                <li>
+                <li class="footer-item">
                     <a href="#">Yangiliklar</a>
                 </li>
-                <li>
+                <li class="footer-item">
                     <a href="#">Kontaktlar</a>
                 </li>
             </ul>
-            <ul>
+            <ul class="site-footer-links">
                 <li>
                     <a href="#">Ilmiy nashrlar</a>
                 </li>
@@ -148,7 +153,7 @@
                     <a href="#">Bolalar uchun</a>
                 </li>
             </ul>
-            <ul>
+            <ul class="site-footer-links">
                 <li>
                     <a href="#">Ko’p so’raladigan savollar</a>
                 </li>
@@ -159,7 +164,7 @@
                     <a href="#">To’lov usullari haqida</a>
                 </li>
             </ul>
-            <ul>
+            <ul class="site-footer-links">
                 <li>
                     <a href="#">Bo’sh ish o’rinlari</a>
                 </li>
