--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
     <!-- STYLES -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- <style>
+        *:focus {
+            outline: 2px dotted red;
+            outline-offset: 3px;
+        }
+    </style> -->
 </head>
 <body>
 
