--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- STYLES -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <style>
-        *:focus {
-            outline: 2px dotted red;
-            outline-offset: 3px;
-        }
-    </style> -->
 </head>
 <body>
 
@@ -31,10 +26,10 @@
         <div class="site-header-actions">
             <nav>
                 <ul class="sitenav-list">
-                    <li><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-                    <li><a class="sitenav-link" href="#">Kitoblar</a></li>
-                    <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
-                    <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
                 </ul>
             </nav>
             <a class="main-link" href="#">Ro’yxatdan o’tish</a>
@@ -85,8 +80,10 @@
         <section class="promo">
             <div class="promo-content">
                 <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-                <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
-                <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highligh">50 ta kitob</strong>ni <strong class="promo-highligh">350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+                <div class="promo-info-wrapper">
+                    <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.</p>
+                    <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highligh">50 ta kitob</strong>ni <strong class="promo-highligh">350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+                </div>
                 <a class="main-link" href="#">Buyurtma berish</a>
             </div>
             <!-- AKSIYADAGI KITOBLAR TOPLAMI RASMI -->
