--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- STYLES -->
     <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
 </head>
 <body>
 
