Make header section responsive

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         <div class="site-header-container container">
             <a class="logo-link" href="#">
                 <!-- AKADEMNASHR LOGO RASMI -->
-                <img src="img/AkademnashrLogo.svg" alt="Akademiknashir logosi" width="227" height="60">
+                <img class="logo-img" src="img/AkademnashrLogo.svg" alt="Akademiknashir logosi" width="227" height="60">
             </a>
+            <button class="header-menu-toggle-button js-toggle-menu">
+                <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96c0-17.7 14.3-32 32-32h384c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zm0 160c0-17.7 14.3-32 32-32h384c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zm448 160c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32h384c17.7 0 32 14.3 32 32z" fill="currentColor"/></svg>
+            </button>
             <div class="site-header-actions">
                 <nav>
                     <ul class="sitenav-list">
@@ -204,6 +207,6 @@
         </div>
     </footer>
 
-
+    <script src="js/script.js"></script>
 </body>
 </html>
