--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <nav>
                     <ul class="sitenav-list">
                         <li class="sitenav-item"><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
-                        <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="https://akademnashr.uz/shop//" target="_blank">Kitoblar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="https://akademnashr.uz/category/yangiliklar/" target="_blank">Yangiliklar</a></li>
+                        <li class="sitenav-item"><a class="sitenav-link" href="https://akademnashr.uz/contact/" target="_blank">Kontaktlar</a></li>
                     </ul>
                 </nav>
                 <a class="main-link" href="#">Ro’yxatdan o’tish</a>
@@ -50,7 +50,7 @@
                     <hr class="orange-line">
                     <h1 class="hero-heading">Pythonda dasturlash<br>asoslari</h1>
                     <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-                    <a class="main-link" href="#">Buyurtma berish</a>
+                    <a class="main-link" href="https://mohirdev.uz/kurslar/dasturlash-asoslari-python/" target="_blank">Buyurtma berish</a>
                 </div>
                 <!-- PYTON BOYICHA KITOB RASMI -->
                 <img class="hero-img" src="img/python-book.jpg" alt="Qolda ushlab turilgan Pythonda dasturlash asoslari kitobi" width="510" height="510" srcset="img/python-book.jpg 1x, img/python-book@2x.jpg 2x">
